[package]
name = "ticker-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.41"
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7.4"
prometheus = "0.13.4"
sysinfo = "0.32.0"

# Additional dependencies for examples
reqwest = { version = "0.12.9", features = ["json"] }
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
